<resources>
    <string name="app_name">Meeting Master</string>

    <!--activity titles-->
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="title_activity_password_reset_2">Confirm Password Reset</string>
    <string name="title_activity_profile_edition">Edit My Profile</string>
    <string name="title_activity_user_search">Search Users</string>
    <string name="title_activity_event_edition">Edit Event</string>
    <string name="title_activity_event_list_view">My Events</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_invitation_list">Invitations</string>
    <string name="title_activity_event_creation">New Event</string>
    <string name="title_activity_add_users_to_meeting">Invite Users</string>
    <string name="title_activity_location_suggestion">Suggest a Location</string>
    <string name="title_activity_suggestions_list">Location Suggestions</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="title_activity_profile_details">User Profile</string>
    <string name="title_activity_attendee_list">Attendees</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_debug_launcher">Debug Launcher</string>

    <!--registration/login strings-->

    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_opt">Phone Number (Opt.)</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="register">New User?</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="confirm">Confirm</string>
    <string name="upload">Upload</string>
    <string name="accept">Accept</string>

    <!-- event/location strings-->
    <string name="event_details">Event Details</string>
    <string name="location_details">Location Details</string>
    <string name="add_file">Add File</string>


    <string name="suggested">Suggested Locations</string>
    <string name="map">Map</string>

    <string name="choose_location">Choose Location</string>

    <string name="view">View</string>
    <string name="textview_placeholder">TextView Placeholder</string>


    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="date_format">Date (YYYY-MM-DD)</string>
    <string name="time_format">Time (HH:MM)</string>
    <string name="duration_format">Duration (in HH:MM)</string>
    <string name="time">Time</string>
    <string name="notes_opt">Event Notes (Optional)</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="room_no">Room Number</string>
    <string name="room_no_opt">Room Number (Optional)</string>
    <string name="location">Location</string>
    <string name="invitees">Invitees</string>
    <string name="invite_button">Invite Users</string>
    <string name="details_suggest_button">Suggest A Location</string>
    <string name="suggest_button">Suggest Location</string>
    <string name="leave_button">Leave Event</string>
    <string name="close">Close</string>
    <string name="invite_accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="search">Search</string>

    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="log_fcm_token">Log FCM Token</string>
    <string name="channel_invite_name">Invitations</string>
    <string name="channel_invite_description">When you are invited to an event</string>
    <string name="channel_edit_name">Edits</string>
    <string name="channel_edit_description">When another user edits an event</string>
    <string name="channel_arrived_home_name">Home Arrival</string>
    <string name="channel_arrived_home_description">When another user has arrived home safely</string>
    <string name="channel_live_location_name">Location Tracking</string>
    <string name="channel_live_location_description">When your location is being tracked</string>
    <string name="channel_leave_now_name">Leave Now</string>
    <string name="channel_leave_now_description">When the user has to leave to get to an event on time</string>
    <string name="channel_download_file_name">File Download</string>
    <string name="channel_download_file_description">When the file attachment of an event is being downloaded</string>
    <string name="notification_invite_title">Event Invitation</string>
    <string name="notification_invite_body">You have been invited to attend %s</string>
    <string name="notification_edit_title">Event Edited</string>
    <string name="notification_edit_body">%s has been edited</string>
    <string name="notification_arrived_home_title">Arrived Home</string>
    <string name="notification_arrived_home_body">%s has arrived home safely</string>
    <string name="notif_service_tracking_location_title">Tracking Location</string>
    <string name="notif_service_tracking_location_body">Other event attendees can see where you are</string>
    <string name="notification_leave_now_body">You should leave now to arrive on time</string>

    <string name="create_event_button">Create Event</string>

    <string name="attendees_list">Attendees List</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_event">Edit Event</string>
    <string name="get_notifications">Notifications</string>
    <string name="duration">Duration</string>

    <!-- menu options -->
    <string name="delete_event">Delete Event</string>
    <string name="export_event">Export Event</string>
    <string name="sync_calendar">Sync Calendar</string>

    <!-- google maps -->


    <string name="desc_service_location_update">Sends your current location to other event attendees</string>
    <string name="start_locationupdateservice">Start LocationUpdateService</string>
    <string name="stop_locationupdateservice">Stop LocationUpdateService</string>
    <string name="status_text_invited_pending">You\'re invited to this event</string>
    <string name="status_text_invited_declined">You\'ve declined this event</string>
    <string name="status_text_invited_accepted">You\'ve accepted this event</string>
    <string name="status_text_starting">This event is starting soon</string>
    <string name="status_action_depart">Depart</string>
    <string name="status_text_goingto">You are going to this event</string>
    <string name="status_action_arrive">Arrive</string>
    <string name="status_text_currentlyat">You are at this event</string>
    <string name="status_action_leave">Leave</string>
    <string name="status_text_leavingfrom">You\'re leaving this event</string>
    <string name="status_action_arrivehome">Arrive Home</string>
    <string name="status_text_over">This event is over</string>
    <string name="show_declined_events">Show Declined Events</string>
    <string name="this_months_events">This Month\'s Events</string>
    <string name="this_weeks_events">This Week\'s Events</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="view_invitations">View Invitations</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="password_reset_instructions">Please provide your email address. You will receive an email to reset your password.</string>
    <string name="send">Send</string>
    <string name="token">Token</string>
    <string name="uid">UID</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
</resources>
